@@ -28,6 +28,7 @@ public class PackageTest
 		final TestSuite suite = new TestSuite();
 		suite.addTestSuite(NaturalLanguageEncodeTest.class);
 		suite.addTestSuite(CopTest.class);
+		suite.addTestSuite(CopParameterRequestTest.class);
 		suite.addTestSuite(ResourceTest.class);
 		suite.addTestSuite(EncodeTest.class);
 		suite.addTestSuite(PagerTest.class);
