@@ -7,6 +7,7 @@ omit bug fixes.
 The items are sorted inversely, i.e. lastest items are on top
 
 --------------------------------------------------------------------------
+* support nesting cops as cop parameters
 * cleanup of cops url generation
   THIS CHANGE IS NOT BACKWARDS COMPATIBLE, YOU MUST ADJUST YOUR CODE !
   - Cop.toString() does not xml-encode anymore (& to &amp etc.)
